--- a/ElementFinder/App.xaml
+++ b/ElementFinder/App.xaml
@@ -1,4 +1,4 @@
 ﻿<Application x:Class="ElementFinder.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainView.xaml" />
+             StartupUri="Views/MainView.xaml" />
