--- a/ElementFinder/Themes/Generic.xaml
+++ b/ElementFinder/Themes/Generic.xaml
@@ -1,12 +1,13 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ElementFinder="clr-namespace:ElementFinder">
+                    xmlns:ElementFinder="clr-namespace:ElementFinder"
+                    xmlns:Controls="clr-namespace:ElementFinder.Controls">
 
-    <Style TargetType="{x:Type ElementFinder:CopyableTextBox}">
+    <Style TargetType="{x:Type Controls:CopyableTextBox}">
         <Setter Property="IsReadOnly" Value="True" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ElementFinder:CopyableTextBox}">
+                <ControlTemplate TargetType="{x:Type Controls:CopyableTextBox}">
                     <Grid>
                         <TextBox Text="{TemplateBinding Text}" IsReadOnly="True" />
                         <Button Content="c" Padding="4,0" Margin="0,0,2,1" HorizontalAlignment="Right" VerticalAlignment="Center" x:Name="PART_CopyButton" ToolTip="{TemplateBinding CopyButtonToolTip}" />
@@ -16,10 +17,10 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type ElementFinder:AutomationPropertiesControl}">
+    <Style TargetType="{x:Type Controls:AutomationPropertiesControl}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ElementFinder:AutomationPropertiesControl}">
+                <ControlTemplate TargetType="{x:Type Controls:AutomationPropertiesControl}">
                     <ScrollViewer HorizontalScrollBarVisibility="Disabled">
                         <ItemsPresenter />
                     </ScrollViewer>
@@ -28,14 +29,14 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type ElementFinder:Property}">
+    <Style TargetType="{x:Type Controls:Property}">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ElementFinder:Property}">
+                <ControlTemplate TargetType="{x:Type Controls:Property}">
                     <DockPanel Background="{TemplateBinding Background}" Margin="1">
                         <TextBlock Text="{TemplateBinding Title}" DockPanel.Dock="Left" Width="150" VerticalAlignment="Center" Margin="2,0" />
-                        <ElementFinder:CopyableTextBox Text="{Binding Value, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}" />
+                        <Controls:CopyableTextBox Text="{Binding Value, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}" />
                     </DockPanel>
                     <ControlTemplate.Triggers>
                         <Trigger Property="Highlight" Value="True">
@@ -48,7 +49,7 @@
     </Style>
     
 
-    <Style TargetType="{x:Type ElementFinder:ToggleSlider}">
+    <Style TargetType="{x:Type Controls:ToggleSlider}">
         <Setter Property="Width" Value="30" />
         <Setter Property="Template">
             <Setter.Value>
