--- a/ElementFinder/Views/MainView.xaml
+++ b/ElementFinder/Views/MainView.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="ElementFinder.LargeView"
+﻿<Window x:Class="ElementFinder.Views.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ElementFinder="clr-namespace:ElementFinder"
+        xmlns:Controls="clr-namespace:ElementFinder.Controls"
         MouseLeftButtonDown="HandleMouseLeftButtonDown"
         Loaded="HandleLoaded"
         Closing="HandleClosing"
-        x:Name="MainView"
+        x:Name="MainUI"
         WindowStyle="None"
         Title="ElementFinder"
         ResizeMode="NoResize"
@@ -29,7 +30,7 @@
                                 <Thumb DockPanel.Dock="Right" Cursor="SizeWE" Width="8" DragDelta="OnSizeDragDelta" />
 
                                 <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" VerticalAlignment="Center">
-                                    <ElementFinder:ToggleSlider IsChecked="{Binding IsEnabled}" />
+                                    <Controls:ToggleSlider IsChecked="{Binding IsEnabled}" />
                                     <Button Click="DoSwitchView" Padding="4,0" ToolTip="Switch to large view">
                                         <TextBlock Text="^" RenderTransformOrigin="0.5, 0.5">
                                             <TextBlock.RenderTransform>
@@ -47,11 +48,11 @@
                                         <ColumnDefinition MinWidth="50" />
                                     </Grid.ColumnDefinitions>
 
-                                    <ElementFinder:CopyableTextBox DockPanel.Dock="Right" Text="{Binding CurrentElement.AutomationId, Mode=OneWay}" CopyButtonToolTip="Copy AutomationId" />
+                                    <Controls:CopyableTextBox DockPanel.Dock="Right" Text="{Binding CurrentElement.AutomationId, Mode=OneWay}" CopyButtonToolTip="Copy AutomationId" />
 
                                     <GridSplitter Grid.Column="1" Width="2" ResizeBehavior="PreviousAndNext" />
 
-                                    <ElementFinder:CopyableTextBox Grid.Column="2" DockPanel.Dock="Right" Text="{Binding CurrentElement.Name, Mode=OneWay}" CopyButtonToolTip="Copy Name" />
+                                    <Controls:CopyableTextBox Grid.Column="2" DockPanel.Dock="Right" Text="{Binding CurrentElement.Name, Mode=OneWay}" CopyButtonToolTip="Copy Name" />
                                 </Grid>
 
                             </DockPanel>
@@ -116,7 +117,7 @@
                                 
                                 <GridSplitter Grid.Column="1" ResizeBehavior="PreviousAndNext" Width="4" />
 
-                                <ElementFinder:AutomationPropertiesControl Grid.Column="2" Element="{Binding CurrentElement.AutomationElement}" HideEmptyEntries="{Binding HideEmptyEntries}" />
+                                <Controls:AutomationPropertiesControl Grid.Column="2" Element="{Binding CurrentElement.AutomationElement}" HideEmptyEntries="{Binding HideEmptyEntries}" />
                                 
                                 <ProgressBar Grid.ColumnSpan="3"
                                              IsIndeterminate="True"
@@ -131,18 +132,18 @@
                         </DockPanel>
 
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
-                            <ElementFinder:ToggleSlider IsChecked="{Binding IsEnabled}" />
+                            <Controls:ToggleSlider IsChecked="{Binding IsEnabled}" />
                             <Button Content="^" Click="DoSwitchView" Padding="4,0" ToolTip="Switch to small view" />
                         </StackPanel>
                     </Grid>
                 </Grid>
 
                 <DataTemplate.Triggers>
-                    <DataTrigger Binding="{Binding IsShortView, ElementName=MainView}" Value="True">
+                    <DataTrigger Binding="{Binding IsShortView, ElementName=MainUI}" Value="True">
                         <Setter TargetName="SmallView" Property="Visibility" Value="Visible" />
                         <Setter TargetName="LargeView" Property="Visibility" Value="Collapsed" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding IsShortView, ElementName=MainView}" Value="False">
+                    <DataTrigger Binding="{Binding IsShortView, ElementName=MainUI}" Value="False">
                         <Setter TargetName="SmallView" Property="Visibility" Value="Collapsed" />
                         <Setter TargetName="LargeView" Property="Visibility" Value="Visible" />
                     </DataTrigger>
