--- a/ElementFinder/Views/MainView.xaml
+++ b/ElementFinder/Views/MainView.xaml
@@ -57,25 +57,35 @@
 
                     <Grid x:Name="LargeView" Visibility="Collapsed">
                         <DockPanel>
-                            <ToolBarTray DockPanel.Dock="Top">
-                                <ToolBar>
-                                    <ToggleButton Content="Quick Search" IsChecked="{Binding QuickSearch}" ToolTip="Search only for the hovered element" />
-                                    <Separator />
-                                    <ToggleButton Content="Expanded" IsChecked="{Binding ExpandAfterSearch}" x:Name="PART_SearchExpanded" ToolTip="Expand / Collapse All" />
-                                    <Separator />
-                                    <ToggleButton Content="Hide Empty" IsChecked="{Binding HideEmptyEntries}" ToolTip="Shows / Hides empty entries in the properties list" />
-                                    <Separator />
-                                    <ToggleButton Content="Auto Copy ID" IsChecked="{Binding AutoCopyAutomationId}" ToolTip="If the catched UI element has an automation ID, it's copied to the clipboard automatically" />
-                                    <Separator />
-                                    <ToggleButton Content="TopMost" IsChecked="{Binding TopMost}" ToolTip="If checked the ElementFinder is always on top" />
-                                    <Separator />
-                                    <ToggleButton Content="TopMost Highlighter" IsChecked="{Binding TopMostHighlighter}" ToolTip="If checked the element highlight is always on top" />
-                                    <Separator />
-                                    <ToggleButton Content="Keep Highlighter Position" IsChecked="{Binding NoticeHighlightPosition}" ToolTip="If checked position of the element highligter will be kept up to date" />
-                                    <Separator />
-                                    <Button Content="Clear" Click="ClearPane" ToolTip="Clears all current displayed elements" />
-                                </ToolBar>
-                            </ToolBarTray>
+                            <DockPanel DockPanel.Dock="Top">
+                                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
+                                    <Controls:ToggleSlider IsChecked="{Binding IsEnabled}" />
+                                    <Controls:ViewChangeButton Click="DoSwitchView" Padding="4,0" ToolTip="Switch to small view" />
+                                </StackPanel>
+                                <ToolBarTray>
+                                    <ToolBar>
+                                        <Button Content="Clear" Click="ClearPane" ToolTip="Clears all current displayed elements" />
+                                    </ToolBar>
+                                    <ToolBar>
+                                        <ToggleButton Content="Quick Search" IsChecked="{Binding QuickSearch}" ToolTip="Search only for the hovered element" />
+                                        <Separator />
+                                        <ToggleButton Content="Expanded" IsChecked="{Binding ExpandAfterSearch}" x:Name="PART_SearchExpanded" ToolTip="Expand / Collapse All" />
+                                        <Separator />
+                                        <ToggleButton Content="Hide Empty" IsChecked="{Binding HideEmptyEntries}" ToolTip="Shows / Hides empty entries in the properties list" />
+                                        <Separator />
+                                        <ToggleButton Content="Auto Copy ID" IsChecked="{Binding AutoCopyAutomationId}" ToolTip="If the catched UI element has an automation ID, it's copied to the clipboard automatically" />
+                                        <Separator />
+                                        <ToggleButton Content="TopMost" IsChecked="{Binding TopMost}" ToolTip="If checked the ElementFinder is always on top" />
+                                        <Separator />
+                                        <ToggleButton Content="TopMost Highlighter" IsChecked="{Binding TopMostHighlighter}" ToolTip="If checked the element highlight is always on top" />
+                                        <Separator />
+                                        <ToggleButton Content="Keep Highlighter Position" IsChecked="{Binding NoticeHighlightPosition}" ToolTip="If checked position of the element highligter will be kept up to date" />
+                                    </ToolBar>
+                                    <ToolBar>
+                                        <Button Content="Settings" Click="ShowSettings" ToolTip="Opens Settings Dialog" />
+                                    </ToolBar>
+                                </ToolBarTray>
+                            </DockPanel>
                             
                             <StatusBar DockPanel.Dock="Bottom">
                                 <StatusBarItem Content="Hold down Ctrl-Shift and mouse over elements to select them." />
@@ -126,10 +136,7 @@
                             
                         </DockPanel>
 
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
-                            <Controls:ToggleSlider IsChecked="{Binding IsEnabled}" />
-                            <Controls:ViewChangeButton Click="DoSwitchView" Padding="4,0" ToolTip="Switch to small view" />
-                        </StackPanel>
+                        
                     </Grid>
                 </Grid>
 
