Add and adjust the tests for the MouseEx

--- a/TestApplication/MainWindow.xaml
+++ b/TestApplication/MainWindow.xaml
@@ -9,6 +9,7 @@
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <Button Content="ColorDetectorTests" AutomationProperties.AutomationId="CUI_ColorDetectorTests_Button" Click="ColorDetectorTests_Button_OnClick" />
         <Button Content="KeyboardExTests" AutomationProperties.AutomationId="CUI_KeyboardExTests_Button" Click="KeyboardExTests_Button_OnClick" />
+        <Button Content="MouseExTests" AutomationProperties.AutomationId="CUI_MouseExTests_Button" Click="MouseExTests_Button_OnClick" />
     </StackPanel>
     
 </Window>
