Add WindowFinder tests

--- a/TestApplication/MainWindow.xaml
+++ b/TestApplication/MainWindow.xaml
@@ -11,6 +11,7 @@
         <Button Content="KeyboardExTests" AutomationProperties.AutomationId="CUI_KeyboardExTests_Button" Click="KeyboardExTests_Button_OnClick" />
         <Button Content="MouseExTests" AutomationProperties.AutomationId="CUI_MouseExTests_Button" Click="MouseExTests_Button_OnClick" />
         <Button Content="WindowFocusTests" AutomationProperties.AutomationId="CUI_WindowFocusTests_Button" Click="WindowFocusTests_Button_OnClick" />
+        <Button Content="Show MessageBox" AutomationProperties.AutomationId="CUI_ShowMessageBox_Button" Click="ShowMessageBox_Button_OnClick" />
     </StackPanel>
     
 </Window>
